--- a/style.css
+++ b/style.css
@@ -308,6 +308,7 @@ nav .btn-langue  p { padding: 15px; font-size: 15px; color: #333; border-top: 1p
 }
 .chapitre p {
   display: flex;
+  white-space: pre-line;
   font-size: 1rem;
   line-height: 1.6;
   color: #444;
