--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ nav .btn-langue  p { padding: 15px; font-size: 15px; color: #333; border-top: 1p
 .hero { height: 100vh;margin-left: 5%;; width: 90%; align-items:center; margin-top: 5%; } /* laisse place pour la nav */
 .tier-hero { height: auto; background: #fff; flex-direction: column;}
 .deuxtierhero { height: 22vh; background: #f3e2c5; }
-.demande { height: 50vh; }
+.demande { height: 66vh; display: flex; }
 .information{height:auto; width:auto;justify-content: flex-start;padding: 5% 10%; background-color: #f9e7b5;
 }
 .information-titre-main{justify-content: center;align-items: center; text-align: center}
