--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ height: 66vh;}
 
 
 /* === FAQ === */
-.faq { background: #ffb265; padding: 60px 10%; }
+.faq { background: #f1c395; padding: 60px 10%; }
 .faq h2 { text-align: center; font-size: 28px; margin-bottom: 10px; }
 .faq-intro { text-align: center; margin-bottom: 40px; font-size: 16px; color: #444; }
 .faq-category { margin-bottom: 40px; }
