--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ nav .btn-langue  p { padding: 15px; font-size: 15px; color: #333; border-top: 1p
   text-align: center; background-size: cover; background-position: center;
   padding: 60px 20px;
 }
-.hero { height: 100vh;margin-left: 5%;; width: 90%; align-items:center; margin-top: 5%; } /* laisse place pour la nav */
+.hero { height: 100vh; width: 90%; align-items:center; margin-top: 5%; } /* laisse place pour la nav */
 .tier-hero { height: auto; background: #fff; flex-direction: column;}
 .deuxtierhero { height: 22vh; background: #f3e2c5; }
 .demande {
